<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navigacion.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.navigacion.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.navigacion.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_musica"
        android:name="com.example.navigacion.ui.musica.musicaFragment"
        android:label="@string/menu_musica"
        tools:layout="@layout/fragment_musica" />
    <fragment
        android:id="@+id/nav_sonido"
        android:name="com.example.navigacion.ui.SonidoFragment"
        android:label="@string/menu_sonido"
        tools:layout="@layout/fragment_sonido" />
    <fragment
        android:id="@+id/nav_calculadora"
        android:name="com.example.navigacion.CalculadoraFragment"
        android:label="@string/menu_calculadora"
        tools:layout="@layout/fragment_calculadora" />
    <fragment
        android:id="@+id/nav_mapa"
        android:name="com.example.navigacion.MapaFragment"
        android:label="fragment_mapa"
        tools:layout="@layout/fragment_mapa" />
</navigation>