<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_musica"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Musica" />
        <item
            android:id="@+id/nav_calculadora"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Calculadora" />
        <item
            android:id="@+id/nav_sitioweb"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="SitioWeb" />
        <item
            android:id="@+id/nav_direccioneaotroapk"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Apk" />
        <item
            android:id="@+id/nav_maravillasmodernas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Maravillasmodernas" />
        <item
            android:id="
            @+id/nav_mapa"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Mapa" />



    </group>
</menu>